add index.html for local development only

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-const char PAGE_MAIN[] PROGMEM = R"=====(
+<!--
+    Just for easier frontend development in local browser
+
+    Copy & Paste the raw HTML into  Sketch/html.h
+    
+    const char PAGE_MAIN[] PROGMEM = R"=====(
+        INSIDE HERE
+    )=====";
+-->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -197,4 +206,3 @@ const char PAGE_MAIN[] PROGMEM = R"=====(
         </script>
     </body>
 </html>
-)=====";
